--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.sql.init.mode=always
 spring.sql.init.platform=h2
 
 logging.level.root=INFO
+
+openai.api.key=SECRET
+
+image.download.folder=/Users/yumotojima/Desktop/Spring/Mastering-Spring-Boot-3.0/GenerateImage/src/main/resources/download
