--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.sql.init.platform=h2
 
 logging.level.root=INFO
 
-openai.api.key=SECRET
+# Below key is secret.
+openai.api.key=
 
-image.download.folder=/Users/yumotojima/Desktop/Spring/Mastering-Spring-Boot-3.0/GenerateImage/src/main/resources/download
+image.generate.number=1
+image.generate.size=1024x1024
+image.download.folder=classpath:download
